@@ -1,9 +1,14 @@
+2003-04-10  Michael Yount <csf@moscow.com>
+
+        * lib/Mj/Resend.pm:  (do_digests)  Prevent "To" and "From"
+        headers from being duplicated by the message_headers setting.
+
 2003-04-08  Michael Yount <csf@moscow.com>
 
-	* lib/Mj/List.pm (_make_aux):  Bugfix: Return undef if
+	* lib/Mj/List.pm:  (_make_aux)  Bugfix: Return undef if
 	the sublist was not initialized.  Thanks to Mathieu Arnold.
 
-	* setup/query_util.pl (prompt):  Allow answers to be read
+	* setup/query_util.pl:  (prompt)  Allow answers to be read
 	from a response file.  Implemented by Rudolph Maceyko.
 
 2003-03-25  Jason Tibbitts  <tibbs@math.uh.edu>
